47
================

10/02/23 Copy the fee when creating a new due payment
09/02/23 Retry failed S3 PUT upto 5 times with increasing intervals
08/02/23 Add lksoutcome for outcome fields in v_animal and report/querybuilder
08/02/23 Include medical info in clinic documents
07/02/23 Suggest current vet email address when emailing from media
07/02/23 Truncate long payment comments when creating transactions
03/02/23 Batch processes to update breed names #1226
03/02/23 Suppress redundant flag change log when creating new person
01/02/23 Fix to additional field merge so that target doesn't need to exist first

46
================

30/01/23 onlineform: breed/species/colour lookups should have blank option
29/01/23 When merging people and animals, copy/merge the additional field values
28/01/23 Option to never anonymise adopters #1218
23/01/23 Add animal events slider (Saggi Neuemann) #1221
23/01/23 FTP TLS support for found/24pet 
23/01/23 Event configuration options (Roman+Saggi) #1220
23/01/23 Event page (Roman+Saggi) #1217
23/01/23 Default payment types to accounts link broken in new databases #1219
22/01/23 Remove flag change message when first saving animal with no flags
20/01/23 entry/intake history UI (defaults to off) #25
19/01/23 Backend implementation/unit tests for entry history #25
17/01/23 Custom SMTP overrides should only ever use the configured From address
17/01/23 Fix bug with European locales generating monthly figures report
17/01/23 Event find screens (Saggi Neuemann) #1216
17/01/23 Add age group filter to animal chooser (Saggi Neuemann) #1215
16/01/23 publishers only need to strip personal data from OWNERNAME
12/01/23 Savourlife: Set under/over 5 based on good with children
09/01/23 Show homechecker info on reservation book (Mike Forrest) #1212
09/01/23 Allow access to watermark settings from config (Mike Forrest) #1213
06/01/23 Make diary notes a default of 1 hour long
06/01/23 Never use SQL LIKE comparisons for usernames when resolving users