@@ -183,6 +183,24 @@ $(function() {
         },
 
         render_accounts: function() {
+            const donmap = function(idx) {
+                return [
+                    '<tr>',
+                    '<td><label for="mapdt' + idx + '">' + _("Payments of type") + '</td>',
+                    '<td><select id="mapdt' + idx + '" data-idx="' + idx + '" class="asm-selectbox donmap">',
+                    '<option value="-1">' + _("[None]") + '</option>',
+                    html.list_to_options(controller.donationtypes, "ID", "DONATIONNAME"),
+                    '</select>',
+                    '</td>',
+                    '<td>' + _("are sent to") + '</td>',
+                    '<td><select id="mapac' + idx + '" class="asm-selectbox">',
+                    '<option value="-1">' + _("[None]") + '</option>',
+                    html.list_to_options(controller.accounts, "ID", "CODE"),
+                    '</select>',
+                    '</td>',
+                    '</tr>'
+                ].join("\n");
+            };
             return [
                 '<div id="tab-accounts">',
                 '<p><input data="rc:DisableAccounts" id="disableaccounts" type="checkbox" class="asm-checkbox" />',
@@ -256,76 +274,15 @@ $(function() {
                 '</select>',
                 '</td>',
                 '</tr>',
-                '<tr>',
-                '<td><label for="mapdt1">' + _("Payments of type") + '</td>',
-                '<td><select id="mapdt1" class="asm-selectbox donmap">',
-                '<option value="-1">' + _("[None]") + '</option>',
-                html.list_to_options(controller.donationtypes, "ID", "DONATIONNAME"),
-                '</select>',
-                '</td>',
-                '<td>' + _("are sent to") + '</td>',
-                '<td><select id="mapac1" class="asm-selectbox">',
-                '<option value="-1">' + _("[None]") + '</option>',
-                html.list_to_options(controller.accounts, "ID", "CODE"),
-                '</select>',
-                '</td>',
-                '</tr>',
-                '<tr>',
-                '<td><label for="mapdt2">' + _("Payments of type") + '</td>',
-                '<td><select id="mapdt2" class="asm-selectbox donmap">',
-                '<option value="-1">' + _("[None]") + '</option>',
-                html.list_to_options(controller.donationtypes, "ID", "DONATIONNAME"),
-                '</select>',
-                '</td>',
-                '<td>' + _("are sent to") + '</td>',
-                '<td><select id="mapac2" class="asm-selectbox">',
-                '<option value="-1">' + _("[None]") + '</option>',
-                html.list_to_options(controller.accounts, "ID", "CODE"),
-                '</select>',
-                '</td>',
-                '</tr>',
-                '<tr>',
-                '<td><label for="mapdt3">' + _("Payments of type") + '</td>',
-                '<td><select id="mapdt3" class="asm-selectbox donmap">',
-                '<option value="-1">' + _("[None]") + '</option>',
-                html.list_to_options(controller.donationtypes, "ID", "DONATIONNAME"),
-                '</select>',
-                '</td>',
-                '<td>' + _("are sent to") + '</td>',
-                '<td><select id="mapac3" class="asm-selectbox">',
-                '<option value="-1">' + _("[None]") + '</option>',
-                html.list_to_options(controller.accounts, "ID", "CODE"),
-                '</select>',
-                '</td>',
-                '</tr>',
-                '<tr>',
-                '<td><label for="mapdt4">' + _("Payments of type") + '</td>',
-                '<td><select id="mapdt4" class="asm-selectbox donmap">',
-                '<option value="-1">' + _("[None]") + '</option>',
-                html.list_to_options(controller.donationtypes, "ID", "DONATIONNAME"),
-                '</select>',
-                '</td>',
-                '<td>' + _("are sent to") + '</td>',
-                '<td><select id="mapac4" class="asm-selectbox">',
-                '<option value="-1">' + _("[None]") + '</option>',
-                html.list_to_options(controller.accounts, "ID", "CODE"),
-                '</select>',
-                '</td>',
-                '</tr>',
-                '<tr>',
-                '<td><label for="mapdt5">' + _("Payments of type") + '</td>',
-                '<td><select id="mapdt5" class="asm-selectbox donmap">',
-                '<option value="-1">' + _("[None]") + '</option>',
-                html.list_to_options(controller.donationtypes, "ID", "DONATIONNAME"),
-                '</select>',
-                '</td>',
-                '<td>' + _("are sent to") + '</td>',
-                '<td><select id="mapac5" class="asm-selectbox">',
-                '<option value="-1">' + _("[None]") + '</option>',
-                html.list_to_options(controller.accounts, "ID", "CODE"),
-                '</select>',
-                '</td>',
-                '</tr>',
+                donmap(1),
+                donmap(2),
+                donmap(3),
+                donmap(4),
+                donmap(5),
+                donmap(6),
+                donmap(7),
+                donmap(8),
+                donmap(9),
                 '</table>',
                 '</div>'
             ].join("\n");
@@ -1682,7 +1639,7 @@ $(function() {
                 let mappings = "";
                 $(".donmap").each(function() {
                     let t = $(this);
-                    let idx = t.attr("id").substring(5, 6);
+                    let idx = t.attr("data-idx");
                     if (t.val() != "" && t.val() != "0" && t.val() != "-1") {
                         if (mappings != "") { mappings += ","; }
                         mappings += t.val() + "=" + $("#mapac" + idx).val();
